--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   get_it: ^7.6.4
   equatable: ^2.0.5
   animate_do: ^3.1.2
+  flutter_bloc: ^8.1.3
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
