--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,12 +18,15 @@ dependencies:
   animate_do: ^3.1.2
   flutter_bloc: ^8.1.3
   crypto: ^3.0.3
+  freezed_annotation: ^2.4.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.3
+  freezed: ^2.4.5
 
 # The following section is specific to Flutter packages.
 flutter:
